Fix minor column dragging bugs
Scrollbars should not appear and multi checkbox dragging was messing bom
body.

--- a/InteractiveHtmlBom/web/ibom.css
+++ b/InteractiveHtmlBom/web/ibom.css
@@ -194,6 +194,7 @@ canvas:active {
   table-layout: fixed;
   width: 100%;
   margin-top: 1px;
+  position: relative;
 }
 
 .bom th,
